--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body class="bg-zinc-900 text-zinc-50 h-dvh flex flex-col items-center justify-center">
+  <body class="bg-zinc-900 text-zinc-50 h-dvh flex flex-col items-center">
     <div class="max-w-lg w-full flex flex-col gap-3" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
