feat: improve skeleton loader

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ticket Status</title>
   </head>
   <body>
-    <div class="absolute top-0 z-[-2] h-screen w-screen bg-white bg-[radial-gradient(100%_50%_at_50%_0%,rgba(0,163,255,0.13)_0,rgba(0,163,255,0)_50%,rgba(0,163,255,0)_100%)]">
+    <div class="absolute top-0 z-[-2] h-screen w-screen bg-white bg-[radial-gradient(100%_50%_at_50%_0%,rgba(0,255,200,0.13)_0,rgba(0,255,0,0)_50%,rgba(0,255,0,0)_100%)]"> </div>
     <main id="root"></main>
     <script type="module" src="/src/main.tsx"></script>
   </body>
