feat: add open graph protocol

--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/webp" href="/gestoru-logo.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Consulta el estado de tu soporte mediante esta herramienta"/>
+    <meta name="keywords" content="Soporte, ticket, gestoru soporte"/>
+    <meta name="author" content="Gestoru software"/>
+    <meta property="og:image" content="/gestoru-logo.webp" />
+    <meta property="og:title" content="Consulta el estado de tu soporte!" />
     <title>Ticket Status</title>
   </head>
   <body>
