the legendary first commit!

--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/webp" href="/images/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Consulta el estado de tu soporte mediante esta herramienta"/>
-    <meta name="keywords" content="Soporte, ticket, gestoru soporte"/>
-    <meta name="author" content="Gestoru software"/>
-    <meta property="og:image" content="https://soporte.gestoru.com/images/opengraph.jpg" />
-    <meta property="og:title" content="Consulta el estado de tu soporte" />
-    <title>Ticket Status</title>
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-tsrouter-app"
+    />
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <title>Create TanStack App - soporte-gestoru</title>
   </head>
   <body>
-    <div class="absolute top-0 z-[-2] h-screen w-screen bg-white bg-[radial-gradient(100%_50%_at_50%_0%,rgba(0,255,200,0.13)_0,rgba(0,255,0,0)_50%,rgba(0,255,0,0)_100%)]"> </div>
-    <main id="root"></main>
+    <div id="app"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
