fix: update project references and improve route handling
- Changed the title in index.html from "Soporte - Gestoru" to "Soporte - Integra".
- Updated pnpm-lock.yaml to version 9.0 and optimized dependency structure.
- Refactored routeTree.gen.ts to use consistent imports for root and index routes.
- Modified HeroSection.tsx to replace logo and update footer text to reflect the new branding.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="favicon.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Soporte - Gestoru</title>
+    <title>Soporte - Integra</title>
   </head>
   <body>
     <div id="app"></div>
